update analysis